[metadata]
name = dd-import
version = 1.0.4
author = Stefan Fleckenstein
author_email = stefan.fleckenstein@maibornwolff.de
description = A utility to (re-)import findings and language data into DefectDojo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MaibornWolff/dd-import
project_urls =
    Issue Tracker = https://github.com/MaibornWolff/dd-import/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    dd_import = dd_import
packages = dd_import
python_requires = >=3.8
install_requires =
    requests>=2.26.0

[options.packages.find]
where = dd_import

[options.entry_points]
console_scripts =
    dd-reimport-findings = dd_import.dd_reimport_findings:dd_reimport_findings
    dd-import-languages = dd_import.dd_import_languages:dd_import_languages